2002-12-03  Jon K Hellan  <hellan@acm.org>

	* src/sheet-filter.c (cb_filter_button_release): Check if event
	window is popup window.

2002-12-03  Morten Welinder  <terra@diku.dk>

	* src/xml-io.c (POINT_SIZE_PRECISION): Increase to 4.
	(xml_node_set_print_unit): Just use the GnomePrintUnit name.
	(xml_node_get_print_unit): Use unit_name_to_unit.

	* src/print-info.c (print_unit_new, unit_name_get_short_name,
	unit_name_get_name): Delete.
	(unit_name_to_unit): Return a GnomePrintUnit*.  Remove unused
	"translated" argument.  All callers changed.
	(unit_convert): Take GnomePrintUnit* arguments.  All callers
	changed.

	* src/print-info.h (enum UnitName): Delete.

2002-12-03  Jon K Hellan  <hellan@acm.org>

	* configure.in: Check for gtk_settings_get_for_screen

2002-12-03  Jon K Hellan  <hellan@acm.org>

	* src/item-bar.c (item_bar_calc_size): Use default desktop font of
	screen.

	* src/workbook-control-gui.[ch] (wbcg_get_font_desc): New .Return
	font_desc of default desktop font, looking it up if not
	known. Wire up notification about font changes.

	* src/workbook-control-gui.c: Add PivotTable verb.
	(settings_get_font_desc): New. Get Pango font desc from string.
	(cb_update_item_bar_font): New callback. Called from
	gtk_container_foreach for each notebook tab to update the item bars.
	(cb_desktop_font_changed): New callback. Called when desktop font
	has changed.
	(wbcg_get_gtk_settings): New. Gets GtkSettings - by screen if
	possible.
	
	(workbook_control_gui_init): Init font_desc to NULL.

	* src/workbook-control-gui-priv.h (struct _WorkbookControlGUI):
	Add font_desc.

2002-12-03  Jody Goldberg <jody@gnome.org>

	* src/sheet-filter.c : add condition framework
	  select existing conditions
	  provide feedback for which filter is active
	  Support blank/non-blank/All filters

2002-12-02  Jon K Hellan  <hellan@acm.org>

	* src/io-context-gtk.c (icg_inc_files_done): Only increment file
	progress bar if we have one (bug #100081).
