@@ -71,7 +71,7 @@ Pending Patches
 20) Change =IF back to a nodes function to handle the majority case
 21) AutoFilter
     21.1) fix sizing and mouse for scrolled combos
-    21.2) race condition on start
+    21.2) race condition on start				(DONE)
     21.3) expression filters
     21.4) top 10 filters
     21.5) blank filters						(DONE)
@@ -82,6 +82,8 @@ Pending Patches
     21.10 expression dialog
     21.11) Handle range changes (cut-n-paste or ins/del col/row)
     21.12) xml import/export
+    21.13) Handle the relationship between groups and filters
+
 22) Add dirty flags to workbook too, adding a sheet should
     make workbook dirty not the new sheet.
 
