@@ -40,7 +40,7 @@ gnumeric_reqs="
 glib-2.0	>= 2.0.0
 gobject-2.0	>= 2.0.0
 gmodule-2.0	>= 2.0.0
-libgsf-1	>= 1.5.0
+libgsf-1	>= 1.6.0
 gtk+-2.0	>= 2.0.0
 libxml-2.0	>= 2.4.12
 libglade-2.0	>= 1.99.7
